# Myopia

./: .gitignore  Pipfile  README.md  pyproject.toml
Dependencies/: Pipfile  conda.yaml  requirements-conda.txt  requirements-pip.txt
Docs/: api.md  archive.md  backend.md  changelog.md  code.md  fortend.md  index.md  issues.md  migration.md  ops.md  plan.md  refs.md  requirement.md
System/: gunicorn.py  gunicorn_standby.py  manage.py  nginx-test.conf  nginx-uwsgi.conf  nginx.conf  supervisor.ini  supervisor_standby.ini  test.py  uwsgi.ini
System/Common/admin/: __init__.py  base.py  equipments.py  project.py  regions.py  role.py  user.py
System/Common/libs/: __init__.py  tgfbi.py
System/Common/libs/images/: logo.ai
System/Common/management/commands/: create_user.py  export_data.py  handle_oss.py  init_data.py
System/Common/models/: __init__.py  base.py  equipments.py  project.py  role.py  sundry.py  user.py
System/Common/serializers/: __init__.py  base.py  equipments.py  project.py  role.py  token.py  user.py
System/Common/serializers/base/: __init__.py  equipments.py  project.py  regions.py  role.py  user.py
System/Common/static/js/: utils.js
System/Common/templates/: PSI SEE 高度近视遗传风险评估知情同意书.html  base.html  index.html
System/Common/templates/base/: index.html  table-scripts.html  table-styles.html  vue.html
System/Common/templates/frame/: bootstrap4.html  bootstrap5.html  element-plus.html  layui.html  vue2.html  vue3.html
System/Common/templates/plugs/: axios.html  bootstrap-table-scripts.html  bootstrap-table-styles.html  font-awesome-4.7.0.html  font-awesome-5.15.4.html  (+4 more)
System/Common/utils/: __init__.py  command.py  decorator.py  middlewares.py  ophthalmology.py  time.py
System/Common/viewModels/: __init__.py  base.py  choices.py  equipments.py  project.py  user.py
System/Common/views/: __init__.py
System/Config/: asgi.py  urls.py  wsgi.py
System/Config/settings/: __init__.py  base.py  develop.py  product.py  project.py  project_dev.py  test.py
System/Sample/: __init__.py
System/Sample/libs/: __init__.py  tgfbi.py
System/Sample/models/: __init__.py  project.py
System/Sample/utils/: __init__.py
System/Sample/viewModels/: __init__.py  feedback.py  project.py  tgfbi.py
System/Sample/views/: __init__.py
System/Screening/: __init__.py
System/Screening/libs/: menus.py
System/Screening/management/: __init__.py
System/Screening/models/: __init__.py
System/Screening/utils/: __init__.py
System/Screening/viewModels/: __init__.py  feedback.py  project.py
System/Screening/views/: __init__.py
System/UserService/: __init__.py
System/UserService/models/: __init__.py  user.py
System/UserService/utils/: __init__.py  report.py
System/UserService/viewModels/: __init__.py  feedback.py  project.py  report.py
System/UserService/views/: __init__.py
(+207 files in other folders)
